--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <form action="/" method="post">
         <label for="cityInput">City Name: </label>
         <input id="cityInput" type="text" name="cityName">
-        <button type="submit">Go</button>
+        <button type="submit">Go -></button>
     </form>
 </body>
 </html>
